--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -3,3 +3,5 @@ FROM php:8.3-fpm
 RUN apt update -q
 RUN apt install -q -y libpq-dev
 RUN docker-php-ext-install pdo_pgsql pgsql
+
+RUN pecl install xdebug && docker-php-ext-enable xdebug;
